--- a/style.css
+++ b/style.css
@@ -129,10 +129,19 @@ main {
     position: unset;
   }
   header .show .hover-block {
-    display: inline-block;
+    display: none;
   }
   header .show .hover-none {
-    display: none;
+    display: inline-block;
+  }
+  header .show .hr {
+    width: 2000px;
+    border-bottom: 1px solid #8080805c;
+    position: absolute;
+    top: 0;
+    left: -141px;
+    -webkit-box-shadow: 2px 2px 3px #8080805c;
+            box-shadow: 2px 2px 3px #8080805c;
   }
   header .show .dropdown-menu.show {
     padding: 40px 100px 40px 100px;
@@ -465,6 +474,16 @@ main {
     height: 39px;
     margin: 20px 0 21px 40px;
   }
+  header .navbar .tb-sns {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 103px 0 143px 0;
+  }
+  header .navbar .tb-sns li.tb-ins {
+    margin: 0 84px 0 86px;
+    background-color: gray;
+  }
   header .navbar .header-tb-right {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -558,13 +577,6 @@ main {
   }
   header .navbar .header-tb-right ul.tb li.tb-event > a {
     margin: unset;
-  }
-  header .navbar .header-tb-right ul.tb.sns {
-    margin: 103px 0 143px 0;
-  }
-  header .navbar .header-tb-right ul.tb.sns li.tb-ins {
-    margin: 0 84px 0 86px;
-    background-color: gray;
   }
   header .navbar .header-tb-right img {
     width: 35px;
@@ -760,17 +772,11 @@ main {
     height: 25px;
     margin: 10px 0 10px 14px;
   }
-  header .navbar .header-tb-right ul.tb.header {
+  header .navbar .tb-sns {
     display: none;
   }
-  header .navbar .header-tb-right ul.tb.sns {
-    margin: 43px 0 46px 0;
-  }
-  header .navbar .header-tb-right ul.tb.sns li.tb-ins {
-    margin: 0 34px 0 36px;
-  }
-  header .navbar .header-tb-right .search.hover-img {
-    margin-right: 30px;
+  header .navbar .header-tb-right ul.tb.header {
+    display: none;
   }
   header .navbar .header-tb-right img {
     width: 18px;
@@ -778,8 +784,22 @@ main {
     -o-object-fit: contain;
        object-fit: contain;
   }
+  header .navbar .header-tb-right .search.hover-img {
+    right: 62px;
+    top: 10px;
+  }
   header .navbar .header-tb-right button.navbar-toggler {
     margin-right: 14px;
+  }
+  header .navbar .header-tb-right button.navbar-toggler .cancel.hover-img {
+    right: 14px;
+    top: 12px;
+  }
+  header .navbar .header-tb-right .dropdown-menu.show {
+    margin: unset;
+    width: 100%;
+    top: 45px;
+    height: 74px;
   }
   header .navbar .navbar-collapse.collapse.show ul.navbar-nav {
     width: 320px;
