header.scssを修正しました

--- a/style.css
+++ b/style.css
@@ -100,15 +100,6 @@ input, select {
   vertical-align: middle;
 }
 
-.none {
-  display: none !important;
-}
-
-main {
-  position: absolute;
-  top: 80px;
-}
-
 @media (max-width: 1441px) {
   header {
     margin: 0 auto;
@@ -213,6 +204,12 @@ main {
   }
   header .navbar {
     padding: unset;
+    position: fixed;
+    z-index: 1;
+    background-color: #fff;
+  }
+  header .navbar .none {
+    display: none !important;
   }
   header .navbar .logo {
     margin: 18px 0 20px 0;
