--- a/_header.scss
+++ b/_header.scss
@@ -1,10 +1,3 @@
-.none {
-    display: none !important;
-}
-main {
-    position: absolute;
-    top: 80px;
-}
 header {
     @mixin nav-item-a ($w,$fs:16px){
         > a {
@@ -99,6 +92,12 @@ header {
 
         .navbar{
             padding: unset;
+            position: fixed;
+            z-index: 1;
+            background-color :$white1;
+            .none {
+                display: none !important;
+            }
             .logo {
                 margin: 18px 0 20px 0;
                 width: 130px;
