.footer-wrapperをflexboxを使って回り込むようにした/ブレイクポイントの変更

--- a/_footer.scss
+++ b/_footer.scss
@@ -9,14 +9,14 @@ footer{
         margin: 0px;
     }
     .footer-wrapper{
-        // display: flex;
+        display: flex;
+        flex-wrap: wrap;
         justify-content: space-between;
         padding: 0px 130px;
         padding-top: 95px;
         padding-bottom: 70px;
         .footer-left-wrapper{
             font-size: 14px;
-            float: left;
             .footer-logo{
                 width: 130px;
                 height: auto;
@@ -28,15 +28,14 @@ footer{
             }
         }
         .footer-right-wrapper{
+            width: 166px;
             color: #ffffff;
             transition: 0.5s;
-            float: right;
+            display: flex;
+            justify-content: space-between;
             i:hover{
                 opacity: 0.5;
                 transition: 0.5s;
-            }
-            .facebook,.instagram{
-                padding-right: 51px;
             }
         }
     }
@@ -44,13 +43,12 @@ footer{
         color: #ffffff;
         padding-left: 130px;
         padding-top: 70px;
-        // display: inline-block;
         clear: both;
         float: left;
     }
 }
 
-@media screen and (max-width:769px){
+@media screen and (max-width:991.98px){
     footer{
         height: 338px;
         .footer-wrapper{
@@ -80,7 +78,7 @@ footer{
     }
 }
 
-@media screen and (max-width:321px){
+@media screen and (max-width:575.98px){
     footer{
         height: 400px;
         width: 100%;
@@ -97,7 +95,7 @@ footer{
                 }
             }
             .footer-right-wrapper{
-                text-align: center;
+                margin: 0 auto;
                 float: none;
             }
         }
